--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,5 @@
 {
-    "token": "Nzc0NDg5MTI2MjQ2MTU0MjYx.X6YhNQ.74Ah-pXNFEyzueZBPchxJIcVzl0",
+    "token": "",
     "owners": [706052939092852816],
     "youtubeApiKey": "AIzaSyAYseMq85yURLJ-lLX_qT8_jUzTBpmnVe8",
     "imdbKey": "5e36f0db",
